# SDL_playground

./: .gitignore  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CppProperties.json  compilar-dependencias.py  imgui.ini  vcpkg.json
include/: CustomCollision.hpp  CustomGameCharacters.hpp  CustomGameComponents.hpp  CustomGameObjects.hpp  CustomGameUtils.hpp  CustomPhysics.hpp  CustomPlayerBuilder.hpp  CustomSDLObject.hpp  CustomSDLObjects.hpp  CustomScreen.hpp  CustomTexture.hpp  CustomUtils.hpp  EntityManager.hpp  Scene.hpp  Stage.hpp  TestStage.hpp  World.hpp
include/debug/: DebugInterface.hpp
include/utils/: CyclicIterator.hpp  LazyLoadMatrix.hpp  SDL2_Box2D_Utils.hpp
include/utils/macros/: platform.hpp
src/: main.cpp
src/custom_classes/: CustomGameCharacters.h  CustomGameCharacters.hpp  CustomPosition.h  CustomPosition.hpp  CustomSDLObject.h  CustomSDLObject.hpp  CustomScreen.hpp  Scene.hpp  Stage.hpp
src/custom_classes/src/: CustomCollision.cpp  CustomGameCharacters.cpp  CustomPosition.cpp  CustomSDLObject.cpp  CustomScreen.cpp  CustomUtils.cpp  Stage.cpp  World.cpp
src/engine/: CustomGameCharacters.cpp  CustomGameComponents.cpp  CustomGameObject.cpp  CustomGameObjects.cpp  CustomGameUtils.cpp  CustomPhysics.cpp  CustomPlayerBuilder.cpp  CustomSDLObject.cpp  CustomSDLObjects.cpp  CustomScreen.cpp  CustomTexture.cpp  Stage.cpp  World.cpp
src/test/: Tests.cpp  test.cpp
